@@ -4,6 +4,7 @@
 	- Added patch from RT#55279 to fix 'POE_EVENT_LOOP="Glib" perl -MPOE -e 1' bug
 	- Added patch from RT#53302 to fix filehandle watcher bug
 	- Bumped POE::Test::Loops prereq to 1.034 so we can use the new =begin/=end syntax and more tests!
+	- Fixed RT#49742 'POE::Kernel->run() doesn't return immed. if no sessions', thanks Rocco Caputo for the fix!
 
 0.037   - fix provides so PAUSE picks up our version again.
 0.0036  - Suppress redefinition warnings
